[fix] remove align center app container

--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,5 @@ hr {
 
 #root {
   display: flex;
-  justify-content: center;
-  align-items: center;
   height: auto;
 }
