--- a/src/styles/ButtonsMenuSelector.css
+++ b/src/styles/ButtonsMenuSelector.css
@@ -8,6 +8,7 @@ nav {
   align-items: center;
   width: 100%;
   height: 100px;
+  min-height: 100px;
   background: linear-gradient(0deg, rgba(23,23,23,1) 0%, rgba(38,38,38,1) 80%);
 }
 
